--- a/css/style.css
+++ b/css/style.css
@@ -2611,7 +2611,7 @@ footer {
     display: flex;
     justify-content: center;
     padding-left: 5%;
-    margin-top: 1%;
+    margin-top: 1.5%;
 }
 
 .switch-field {
@@ -2712,7 +2712,7 @@ footer {
     justify-content: flex-start;
     width: 100%;
     margin: 1% 0;
-    padding: 0 3% 0 5%;
+    padding: 0 2% 0 5%;
 }
 
 .news-main-contain {
@@ -2877,20 +2877,38 @@ footer {
 }
 
 @media screen and (min-width: 1600px) {
+    .news-main-area {
+        padding-right: 3%;
+    }
+
     .news-main-contain {
         width: 23%;
+        margin-right: 2%;
     }
 }
 
 @media screen and (max-width: 1200px) {
+    .news-img-div {
+        height: 200px;
+    }
+
     .news-type {
         margin-top: 1.5%;
     }
 }
 
 @media screen and (max-width: 998px) {
+    .news-main-area {
+        padding-right: 1.5%;
+    }
+
+    .news-main-contain {
+        width: 45%;
+        margin-right: 5%;
+    }
+
     .news-img-div {
-        height: 200px;
+        height: 240px;
     }
 
     .news-back {
@@ -2904,21 +2922,16 @@ footer {
 
 @media screen and (max-width: 768px) {
     .news-type {
-        padding-left: 7%;
+        padding-left: 5%;
         margin-top: 2.5%;
     }
 
     .news-main-area {
-        padding: 0 7%;
+
         margin-top: 2%;
     }
 
-    .news-main-contain {
-        width: 45%;
-    }
-
     .news-img-div {
-        height: 250px;
         background-size: 200%;
     }
 
@@ -2946,7 +2959,12 @@ footer {
 
 @media screen and (max-width: 600px) {
     .news-type {
-        padding-left: 10%;
+        padding-left: 0%;
+        margin-top: 5%;
+    }
+
+    .switch-field {
+        justify-content: center;
     }
 
     .news-main-area {
@@ -2960,12 +2978,20 @@ footer {
     }
 
     .news-img-div {
-        height: 250px;
+        height: 240px;
         background-size: 140%;
     }
 
     .news-img-div:hover {
         background-size: 120%;
+    }
+
+    .news-inner-area {
+        line-height: 1.5;
+    }
+
+    .news-back {
+        margin-top: 4%;
     }
 }
 
@@ -3366,13 +3392,13 @@ td {
     background-size: cover;
 }
 
-.lazy {
+.autoplay {
     margin-top: 2%;
     width: 100%;
     height: 40vh;
 }
 
-.lazy-img {
+.autoplay-img {
     width: 100%;
     padding: 0 1%;
 }
@@ -3499,7 +3525,7 @@ td {
         top: 39.5vh;
     }
 
-    .lazy {
+    .autoplay {
         height: 31vh;
     }
 
@@ -3545,7 +3571,7 @@ td {
         width: 25%;
     }
 
-    .lazy {
+    .autoplay {
         height: 35vh;
     }
 }
@@ -3638,7 +3664,7 @@ td {
         margin-top: 8%;
     }
 
-    .lazy {
+    .autoplay {
         height: 18vh;
         overflow: hidden;
     }
@@ -3691,7 +3717,7 @@ td {
 /* art */
 
 .charity-inner-container {
-    border-top: 50px solid #d4eeff80 ;
+    border-top: 50px solid #d4eeff80;
 }
 
 .c-border {
@@ -3723,7 +3749,7 @@ td {
 .c-title-area h1 {
     color: white;
     font-family: 'DFT_TX3', 'Noto Sans TC', serif;
-    font-size: 3em;
+    font-size: 3.5em;
     line-height: 1;
     background-image: url(../img/charity/Polygon.png);
     background-repeat: no-repeat;
@@ -3768,6 +3794,7 @@ td {
 
 .c-text01 h1 {
     margin-bottom: 0;
+    font-weight: 600;
 }
 
 .c-text01 h5 {
@@ -3778,25 +3805,25 @@ td {
     margin-top: 3%;
 }
 
-.c-letter{
+.c-letter {
     position: absolute;
     right: 0;
     top: -12%;
     letter-spacing: 10px;
-    color: #daf3ff94;
+    color: #daf3ff5e;
     font-size: 10em;
     font-weight: 1000;
-    writing-mode:vertical-lr;
+    writing-mode: vertical-lr;
 }
 
-.c-letter2{
+.c-letter2 {
     position: absolute;
     left: 0;
     top: -5%;
-    color: #daf3ff94;
+    color: #daf3ff5e;
     font-size: 9em;
     font-weight: 1000;
-    writing-mode:vertical-rl;
+    writing-mode: vertical-rl;
     transform: rotate(180deg);
 }
 
@@ -3831,6 +3858,7 @@ td {
 
 .c-text02 h1 {
     margin-bottom: 0;
+    font-weight: 600;
 }
 
 .c-text02 h5 {
@@ -3921,4 +3949,221 @@ td {
 
 #navigation ul li ul.myShow {
     display: block;
+}
+
+@media screen and (max-width: 1200px) {
+    .charity-inner-container {
+        border-top: 40px solid #d4eeff80;
+    }
+
+    .c-title-area {
+        width: 90%;
+    }
+
+    .c-title p {
+        width: 90%;
+    }
+
+    .c-pic-contain01 {
+        padding-left: 4.5%;
+        height: 60vh;
+    }
+
+    .c-pic01 {
+        width: 30vw;
+    }
+
+    .c-text01 {
+        width: 35vw;
+        padding: 3.5%;
+    }
+
+    .c-letter {
+        right: -15%;
+    }
+
+    .c-pic-contain02 {
+        margin-top: 4.4%;
+        height: 60vh;
+    }
+
+    .c-pic02 {
+        width: 30vw;
+    }
+
+    .c-text02 {
+        width: 35vw;
+        padding: 3.5%;
+    }
+
+    .c-letter2 {
+        left: -15%;
+    }
+}
+
+@media screen and (max-width: 998px) {
+    .c-pic-contain01 {
+        padding-left: 5.5%;
+    }
+
+    .c-pic01 {
+        width: 35vw;
+    }
+
+    .c-text01 {
+        width: 40vw;
+    }
+
+    .c-pic-contain02 {
+        margin-top: 5.3%;
+    }
+
+    .c-pic02 {
+        width: 35vw;
+    }
+
+    .c-text02 {
+        width: 40vw;
+    }
+
+    .c-letter {
+        right: -8%;
+    }
+
+    .c-letter2 {
+        left: -8%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .c-title {
+        height: 65vh;
+        margin-left: -1%;
+    }
+
+    .c-title-area {
+        box-shadow: 25px -50px 0px #052d63;
+    }
+
+    .c-pic01 {
+        width: 45vw;
+        box-shadow: -125px 150px 0px -100px #052d63;
+    }
+
+    .c-text01 {
+        width: 50vw;
+    }
+
+    .c-subtext {
+        margin-top: 2%;
+    }
+
+    .c-pic-contain02 {
+        margin-top: 6.6%;
+    }
+
+    .c-pic02 {
+        width: 45vw;
+        box-shadow: 125px -150px 0px -100px #052d63;
+    }
+
+    .c-text02 {
+        width: 50vw;
+    }
+
+    .c-letter {
+        right: 0%;
+        font-size: 8em;
+    }
+
+    .c-letter2 {
+        left: -3%;
+        font-size: 7em;
+    }
+
+    #navigation {
+        width: 90%;
+    }
+
+    #navigation>ul>li {
+        width: 85%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .c-title {
+        height: 50vh;
+        margin-left: -2%;
+    }
+
+    .c-title-area h1 {
+        padding-left: 10%;
+        font-size: 3em;
+    }
+
+    .c-pic-contain01 {
+        height: 90vh;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 5%;
+    }
+
+    .c-pic01 {
+        width: 100%;
+        height: 40vh;
+        box-shadow: none;
+    }
+
+    .c-text01 {
+        width: 90%;
+        padding: 5%;
+        margin-left: 0;
+        margin-top: -15%;
+        box-shadow: -66px 66px 0px -50px #052d63;
+    }
+
+    .c-pic-contain02 {
+        height: 90vh;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 5%;
+        margin-top: 0;
+    }
+
+    .c-pic02 {
+        width: 100%;
+        height: 40vh;
+        box-shadow: none;
+    }
+
+    .c-text02 {
+        width: 90%;
+        padding: 5%;
+        margin-right: 0;
+        margin-top: -15%;
+        box-shadow: 66px 66px 0px -50px #052d63;
+    }
+
+    .c-letter {
+        top: 1%;
+    }
+
+    .c-letter2 {
+        top: -4%;
+        left: 0;
+        font-size: 5em;
+    }
+    
+    .c-event-contain{
+        margin-top: 0;
+    }
+    
+    #navigation>ul>li>a>h5 {
+        margin: 0;
+        font-size: 14px;
+    }
+
+    .c-more{
+        margin-left: 5%;
+    }
 }
