--- a/css/style.css
+++ b/css/style.css
@@ -4153,17 +4153,65 @@ td {
         left: 0;
         font-size: 5em;
     }
-    
-    .c-event-contain{
+
+    .c-event-contain {
         margin-top: 0;
     }
-    
+
     #navigation>ul>li>a>h5 {
         margin: 0;
         font-size: 14px;
     }
 
-    .c-more{
+    .c-more {
         margin-left: 5%;
     }
+}
+
+/* green */
+
+.g-letter {
+    position: absolute;
+    right: 0;
+    top: -12%;
+    letter-spacing: 10px;
+    color: #daf3ff5e;
+    font-size: 6em;
+    font-weight: 1000;
+    writing-mode: vertical-lr;
+}
+
+.g-letter2 {
+    position: absolute;
+    left: 0;
+    top: 4%;
+    color: #daf3ff5e;
+    font-size: 8em;
+    font-weight: 1000;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+}
+
+.g-letter3 {
+    position: absolute;
+    right: 0;
+    top: -2%;
+    letter-spacing: 10px;
+    color: #daf3ff5e;
+    font-size: 6em;
+    font-weight: 1000;
+    writing-mode: vertical-lr;
+}
+
+.g-btn{
+    margin-top: 10px;
+    border: #052D63 1px solid;
+    padding: 10px;
+    box-shadow: #50505085 0px 1px 3px;
+    transition: all 0.1s linear;
+}
+
+.g-btn:hover{
+    background-color: #052D63;
+    color: white;
 }
